k8s/base/apps/webkali/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webkali
  namespace: cloud
spec:
  selector:
    app: webkali
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
